# omap-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
example_data/: from_path.omap
examples/: default_write.rs  editor_example.rs  from_path.rs  mountain_top_triangle.rs  simple_example.rs
src/: area_object.rs  colors.txt  format_info.rs  geometry.rs  lib.rs  line_object.rs  map_coord.rs  map_geo_traits.rs  map_object.rs  notes.rs  omap.rs  point_object.rs  scale.rs  serialize.rs  symbol.rs  symbols_10.txt  symbols_15.txt  tag.rs  text_object.rs  transform.rs  utils.rs  view.rs
src/colors/: color.rs  color_set.rs  mod.rs
src/default_maps/: isom_10000.omap  isom_15000.omap  issprom_4000.omap
src/editor/: barrier.rs  format_info.rs  mod.rs  notes.rs  omap_editor.rs  templates_and_view_default.txt  transform.rs
src/editor/colors/: color.rs  color_set.rs  mod.rs
src/editor/geo_ref/: geo_ref.rs  mod.rs
src/editor/geo_referencing/: geo_ref.rs  mod.rs  transform.rs
src/editor/map_parts/: map_part.rs  map_parts.rs
src/editor/objects/: area_object.rs  line_object.rs  map_object.rs  mod.rs  point_object.rs  text_object.rs
src/editor/parts/: map_part.rs  map_parts.rs
src/editor/symbols/: mod.rs  symbol.rs  symbol_set.rs
src/geo_referencing/: geo_ref.rs  map_transform.rs  mod.rs  transform.rs
src/objects/: area_object.rs  line_object.rs  map_object.rs  mod.rs  point_object.rs  text_object.rs
src/parts/: map_part.rs  map_parts.rs  mod.rs
src/symbols/: area_symbol.rs  combined_area_symbol.rs  combined_line_symbol.rs  line_symbol.rs  mod.rs  point_symbol.rs  symbol.rs  symbol_set.rs  text_symbol.rs
src/templates/: mod.rs  template.rs  template_transform.rs  transform.rs
src/writer/: bezier_error.rs  mod.rs  omap_writer.rs  scale.rs  serialize.rs  symbols_10.txt  symbols_15.txt  transform.rs
src/writer/objects/: area_object.rs  line_object.rs  map_object.rs  mod.rs  point_object.rs  text_object.rs
src/writer/symbols/: area_symbol.rs  line_symbol.rs  mod.rs  point_symbol.rs  symbol.rs
