[package]
name = "omap"
version = "1.0.0"
edition = "2024"
authors = ["Øyvind Hjermstad <@yvind>"]
description = "Interact with or write new Open Orienteering Mapper omap-files"
homepage = "https://github.com/yvind/omap-rs"
repository = "https://github.com/yvind/omap-rs"
readme = "README.md"
license = "MIT"
keywords = ["open orienteering mapper", "orienteering", "map", "mapping", "gis"]

[dependencies]
geo-types = "0.7.16"
thiserror = "2.0.17"
quick-xml = "0.38.0"
linestring2bezier = { git = "https://github.com/yvind/linestring2bezier" }

proj4rs = { version = "0.1.5", features = [
    "crs-definitions",
    "geo-types",
], optional = true }
chrono = { version = "0.4.39", optional = true }
world_magnetic_model = { version = "0.4.0", optional = true }

[features]
geo_ref = ["dep:proj4rs", "dep:world_magnetic_model", "dep:chrono"]

[package.metadata.docs.rs]
all-features = true
